--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "ubicomplab.github.io",
+    "name": "zachary.englhardt.com",
     "dependencies": {
         "bootstrap": "3.3.7",
         "jquery": "3.1.0",
