--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@
 #
 
 # Name of your site (displayed in the header)
-name: Ubicomp Lab
+name: Zachary Englhardt
 
 # Short bio or description (displayed in the header)
-description: Ubiquitous Computing Lab at the University of Washington
+description: PhD Student in Computer Science 
 # repository:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/9437612?v=3&s=200
+avatar: https://avatars.githubusercontent.com/u/39633184?v=4
 
 future: true
 
