imwut tagline update

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 2024-4-4
-  blurb: "From Classification to Clinical Insights has been accepted to IMWUT 2024. See you all down under! 🦘🐨"
+  blurb: "From Classification to Clinical Insights has been accepted to IMWUT! Looking forward to presenting at Ubicomp 2024! 🦘🐨"
   url: 
 
 - date: 2024-5-4
