added the dronet paper from Columbia folks

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- date: 2024-6-3
+  blurb: "Check out some early results from this cool collaboration to power MilliMobile robot platform with lasers!"
+  url: https://dl.acm.org/doi/10.1145/3661810.3663466
+
 - date: 2024-4-4
   blurb: "From Classification to Clinical Insights has been accepted to IMWUT! Looking forward to presenting at Ubicomp 2024! 🦘🐨"
   url: 
