added CHI 2025 paper

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,8 @@
+- date: 2025-4-26
+  blurb: "Excited to present our work Incorporating Sustainability in Electronics Design: Obstacles and
+Opportunities at CHI 2025."
+  url: https://dl.acm.org/doi/10.1145/3661810.3663466
+
 - date: 2024-6-3
   blurb: "Check out some early results from this cool collaboration to power MilliMobile robot platform with lasers!"
   url: https://dl.acm.org/doi/10.1145/3661810.3663466
