--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- date: 2025-6-16
+  blurb: "I'm hrilled to be joining Google as a student researcher in consumer health. Looking forward to an exciting summer!"
+  url: 
+
 - date: 2025-4-26
   blurb: "Excited to present our work Incorporating Sustainability in Electronics Design: Obstacles and
 Opportunities at CHI 2025."
