fixed a typo oops

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: 2025-6-16
-  blurb: "I'm hrilled to be joining Google as a student researcher in consumer health. Looking forward to an exciting summer!"
+  blurb: "I'm thrilled to be joining Google as a student researcher in consumer health. Looking forward to an exciting summer!"
   url: 
 
 - date: 2025-4-26
